# snet

./: .gitmodules  CMakeLists.txt
components/bluenrg/: CMakeLists.txt  version.txt
components/bluenrg/BLE_Application/layers_inc/: bluenrg1_hal.h
components/bluenrg/Bluetooth_LE/inc/: bluenrg1_api.h  bluenrg1_events.h
components/bluenrg/CMSIS/Device/ST/BlueNRG1/Include/: BlueNRG2.h
components/bluenrg/Linkerscript/: BlueNRG2.ld
components/bluenrg/addon/inc/: BlueNRG1_conf.h
targets/blinky/: CMakeLists.txt  main.c
targets/examples/: CMakeLists.txt  hello_world.cpp
targets/tests/: CMakeLists.txt  main.cpp  test_template.cpp
tools/: armgcc_flags_bluenrg.cmake  armgcc_post_build.cmake  armgcc_toolchain_linux.cmake
